made minor changes to homepage/template

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
 		<!-- Header -->
 			<header id="header" class="alt skel-layers-fixed">
-				<h1><a href="index.html">HTML5 Website <span>by Html5webtemplates.co.uk</span></a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -59,9 +58,10 @@
 					<h2>Cody Howarth</h2>
 					<p>Developer / Student</p>
 					<ul class="actions">
-						<li><a href="#one" class="button big scrolly">Resume</a></li>
-						<li><a href="#one" class="button big scrolly">Portfolio</a></li>
-						<li><a href="#one" class="button big scrolly">Email</a></li>
+						<li><a href="#one" class="button big scrolly">About Me</a></li>
+						<li><a href="codyhowarth.github.io/cody_howarth_resume.pdf" class="button big scrolly">Resume</a></li>
+						<li><a href="#three" class="button big scrolly">Portfolio</a></li>
+						<li><a href="mailto:codyhowarth@gmail.com" class="button big scrolly">Email</a></li>
 					</ul>
 				</div>
 			</section>
@@ -70,10 +70,9 @@
 			<section id="one" class="wrapper style1">
 				<div class="container">
 					<header class="major">
-						<h2>Lorem ipsum dolor</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing adipiscing in tempor placerat<br />
-						sed amet accumsan enim lorem sem turpis ut. Massa amet erat accumsan curae<br />
-						blandit porttitor faucibus in nisl nisi volutpat massa mi non nascetur.</p>
+						<h2>About Me</h2>
+						<p>Here I will place some various tidbits about myself.<br />
+						</p>
 					</header>
 					<div class="slider">
 						<span class="nav-previous"></span>
@@ -143,17 +142,17 @@
 			<section id="three" class="wrapper style1">
 				<div class="container">
 					<header class="major">
-						<h2>Amet nisl consequat</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing adipiscing in tempor placerat<br />
-						sed amet accumsan enim lorem sem turpis ut. Massa amet erat accumsan curae<br />
-						blandit porttitor faucibus in nisl nisi volutpat massa mi non nascetur.</p>
+						<h2>Portfolio</h2>
+						<p>Here are some projects that I have been involved in:<br />
+						   (COMING SOON)<br />
+						</p>
 					</header>
 					<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Sed amet lorem</h3>
-								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>
+								<h3>Project One</h3>
+								<p>Some stuff about a project</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul>
@@ -162,8 +161,8 @@
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>Massa accumsan</h3>
-								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>
+								<h3>Project Two</h3>
+								<p>Some stuff about project two</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul>
@@ -172,38 +171,8 @@
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								<h3>Faucibus portitor</h3>
-								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</article>
-						</div>
-						<div class="4u 6u$(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-								<h3>Non placerat</h3>
-								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</article>
-						</div>
-						<div class="4u 6u(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<h3>Adipiscing dolor</h3>
-								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</article>
-						</div>
-						<div class="4u$ 6u$(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<h3>Feugiat tempus</h3>
-								<p>Ipsum dolor tempus et commodo lorem accumsan et adipiscing blandit porttitor feugiat tempus lorem faucibus.</p>
+								<h3>Project Three</h3>
+								<p>Some stuff about project three</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Learn More</a></li>
 								</ul>
