--- a/index.html
+++ b/index.html
@@ -25,33 +25,6 @@
 	</head>
 	<body class="landing">
 
-		<!-- Header -->
-			<header id="header" class="alt skel-layers-fixed">
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li>
-							<a href="" class="icon fa-angle-down">Layouts</a>
-							<ul>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
-								<li>
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-				</nav>
-			</header>
-
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
@@ -67,76 +40,15 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style1">
+			<section id="one" class="wrapper style2">
 				<div class="container">
 					<header class="major">
 						<h2>About Me</h2>
-						<p>Here I will place some various tidbits about myself.<br />
-						</p>
+						<p>I've just finished my second year studying Computer Science at University of Toronto with the intention of focusing in computer systems.
+						I'm interested in all aspects of development, but more specfically in game and app development. In my free time generally you'll find me reading, mountain biking/trail riding, watching movies, tinkering with random code, and gaming.</p>
 					</header>
-					<div class="slider">
-						<span class="nav-previous"></span>
-						<div class="viewer">
-							<div class="reel">
-								<div class="slide">
-									<img src="images/slide01.jpg" alt="" />
-								</div>
-								<div class="slide">
-									<img src="images/slide02.jpg" alt="" />
-								</div>
-								<div class="slide">
-									<img src="images/slide03.jpg" alt="" />
-								</div>
-							</div>
-						</div>
-						<span class="nav-next"></span>
-					</div>
 				</div>
-			</section>
-			
-		<!-- Two -->
-			<section id="two" class="wrapper style2">
-				<div class="container">
-					<div class="row uniform">
-						<div class="4u 6u(2) 12u$(3)">
-							<section class="feature fa-briefcase">
-								<h3>Natoque phasellus</h3>
-								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
-							</section>
-						</div>
-						<div class="4u 6u$(2) 12u$(3)">
-							<section class="feature fa-code">
-								<h3>Ultricies dolore</h3>
-								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
-							</section>
-						</div>
-						<div class="4u$ 6u(2) 12u$(3)">
-							<section class="feature fa-save">
-								<h3>Magna lacinia</h3>
-								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
-							</section>
-						</div>
-						<div class="4u 6u$(2) 12u$(3)">
-							<section class="feature fa-desktop">
-								<h3>Praesent lacinia</h3>
-								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
-							</section>
-						</div>
-						<div class="4u 6u(2) 12u$(3)">
-							<section class="feature fa-camera-retro">
-								<h3>Morbi semper</h3>
-								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
-							</section>
-						</div>
-						<div class="4u$ 6u$(2) 12u$(3)">
-							<section class="feature fa-cog">
-								<h3>Arcu consequat</h3>
-								<p>Ipsum dolor tempus commodo amet sed accumsan et adipiscing blandit porttitor sed faucibus.</p>
-							</section>
-						</div>
-					</div>
-				</div>
-			</section>
+			</section>			
 			
 		<!-- Three -->
 			<section id="three" class="wrapper style1">
@@ -144,37 +56,27 @@
 					<header class="major">
 						<h2>Portfolio</h2>
 						<p>Here are some projects that I have been involved in:<br />
-						   (COMING SOON)<br />
 						</p>
 					</header>
 					<div class="row">
-						<div class="4u 6u(2) 12u$(3)">
+						<div class="6u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Project One</h3>
-								<p>Some stuff about a project</p>
+								<a href="#" class="image fit"><img src="images/lock.png" alt="" /></a>
+								<a href="http://cliparts.co">ClipArts</a>
+								<h3>Leaplock</h3>
+								<p>A security/authentication program using the leap motion device. Built using Java.</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="http://challengepost.com/software/leaplock" class="button">Learn More</a></li>
 								</ul>
 							</article>
 						</div>
-						<div class="4u 6u$(2) 12u$(3)">
+						<div class="6u 6u$(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<h3>Project Two</h3>
-								<p>Some stuff about project two</p>
+								<h3>Super Mania Zombie Survival Game</h3>
+								<p>A zombie wave shooter game for use with Oculus rift. Created using Unity 5</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</article>
-						</div>
-						<div class="4u$ 6u(2) 12u$(3)">
-							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								<h3>Project Three</h3>
-								<p>Some stuff about project three</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="http://challengepost.com/software/super-mania-zombie-survival-game" class="button">Learn More</a></li>
 								</ul>
 							</article>
 						</div>
@@ -182,28 +84,11 @@
 				</div>
 			</section>
 			
-		<!-- CTA -->
-			<section id="cta" class="wrapper style3">
-				<h2>Sed faucibus et consequat</h2>
-				<ul class="actions">
-					<li><a href="#" class="button big">Get Started</a></li>
-				</ul>
-			</section>
-			
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
-				</ul>
-				<ul class="menu">
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Terms of Use</a></li>
-					<li><a href="#">Privacy</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="https://twitter.com/CodyHowarth" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="mailto:codyhowarth@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 				</ul>
 				<span class="copyright">
 					&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
