fixed link to resume

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<p>Developer / Student</p>
 					<ul class="actions">
 						<li><a href="#one" class="button big scrolly">About Me</a></li>
-						<li><a href="codyhowarth.github.io/cody_howarth_resume.pdf" class="button big scrolly">Resume</a></li>
+						<li><a href="cody_howarth_resume.pdf" class="button big scrolly">Resume</a></li>
 						<li><a href="#three" class="button big scrolly">Portfolio</a></li>
 						<li><a href="mailto:codyhowarth@gmail.com" class="button big scrolly">Email</a></li>
 					</ul>
