--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 					<div class="row">
 						<div class="6u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/lock.png" alt="" /></a>
-								<a href="http://cliparts.co">ClipArts</a>
+								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 								<h3>Leaplock</h3>
 								<p>A security/authentication program using the leap motion device. Built using Java.</p>
 								<ul class="actions">
