Update pictures of portfolio objects

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="row">
 						<div class="6u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="http://commons.wikimedia.org/wiki/Category:Locks#/media/File:Disc_tumbler_with_key.png" alt="" /></a>
 								<h3>Leaplock</h3>
 								<p>A security/authentication program using the leap motion device. Built using Java.</p>
 								<ul class="actions">
@@ -71,7 +71,7 @@
 						</div>
 						<div class="6u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="http://commons.wikimedia.org/wiki/Category:Plan_9_from_Outer_Space#/media/File:PlanNine_10.jpg" alt="" /></a>
 								<h3>Super Mania Zombie Survival Game</h3>
 								<p>A zombie wave shooter game for use with Oculus rift. Created using Unity 5</p>
 								<ul class="actions">
