Added linked in link on footer

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
+					<li><a href="https://ca.linkedin.com/in/codyhowarth" class="icon fa-linkedin"><span class="label">Linked-In</span></a></li>
 					<li><a href="https://twitter.com/CodyHowarth" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="mailto:codyhowarth@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
+					<li><a href="mailto:codyhowarth@gmail.com" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
 				</ul>
 				<span class="copyright">
 					&copy; Copyright. All rights reserved. Design by <a href="http://www.html5webtemplates.co.uk">Responsive Web Templates</a>
