Add - custom fonts/icons
- Added all of font awesome but most can probably be removed
- Added some custom fonts that I like

--- a/src/projects.html
+++ b/src/projects.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 
 <head>
-    <title>Cody Howarth</title>
+    <title>Cody Howarth - Projects</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body id="mainpage">
-
-
+<body>
 
     <nav class="navbar sticky-top py-0 navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand py-0" href="index.html">
@@ -39,50 +37,50 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1 id="job-title" class="display-4">Cody Howarth</h1>
-            <p id="summary-text" class="lead">Computer Science student, and Software Developer. Currently attending my final year at Univeristy of Toronto,
-                with a specialization in computer science.</p>
+            <h1 id="job-title" class="display-4">Projects</h1>
+            <p id="summary-text" class="lead">Work that I have been involved with</p>
         </div>
+
     </div>
 
     <main class="container">
 
-        <div id="about" class="row">
-            <div class="col-xl-9">
-                <h3>About me</h3>
-                <p>I'm a lifelong learner who loves to build things. Currently finishing up a computer science degree at University
-                    of Toronto. Last year I worked as Software Devloper intern, where I gained valuable skills.
-                </p>
-                <p>Paragraph two goes here.</p>
-            </div>
+        <div class="row py-2">
             <div class="col">
-                <h3>Contact</h3>
-                <div class="row">
-                    <a class="col" href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-hint="LinkedIn">
-                        <i class="fab fa-linkedin"></i>
-                        <span>LinkedIn</span>
-                    </a>
-                </div>
-                <div class="row">
-                    <a class="col" href="https://github.com/codyhowarth" target="_blank" data-hint="GitHub">
-                        <i class="fab fa-github-square"></i>
-                        <span>Github</span>
-                    </a>
-                </div>
-                <div class="row">
-                    <a class="col" href="https://twitter.com/codyhowarth" target="_blank" data-hint="Twitter">
-                        <i class="fab fa-twitter-square"></i>
-                        <span>Twitter</span>
-                    </a>
-                </div>
-                <div class="row">
-                    <a class="col" href="mailto:codyhowarth@gmail.com" target="_blank" data-hint="Email">
-                        <i class="fas fa-envelope-square"></i>
-                        <span>Email</span>
-                    </a>
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="row py-2">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row py-2">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
+
     </main>
 
     <footer class="footer fixed-bottom border-top border-lightgray pt-1 pb-1">
@@ -106,6 +104,7 @@
             </div>
         </div>
     </footer>
+
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/tether.min.js"></script>
