Upate - main page more or less complete
- Fixed font awesome icons
- Fixed scaling problem with header font

--- a/src/projects.html
+++ b/src/projects.html
@@ -34,7 +34,6 @@
         </div>
     </nav>
 
-
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Projects</h1>
@@ -80,31 +79,29 @@
         </div>
         </div>
 
-
     </main>
 
-    <footer class="footer fixed-bottom border-top border-lightgray pt-1 pb-1">
+    <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
-            <div class="col pl-4">
+            <div class="col pl-4 pt-2">
                 &copy; 2018 Cody Howarth.
             </div>
-            <div class="ml-auto mr-4">
-                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-hint="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
+            <div class="ml-auto mr-4 pt-2 pb-0">
+                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                    <i class="fab fa-linkedin fa-lg mx-1"></i>
                 </a>
-                <a href="https://github.com/codyhowarth" target="_blank" data-hint="GitHub">
-                    <i class="fab fa-github-square"></i>
+                <a href="https://github.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Github">
+                    <i class="fab fa-github-square fa-lg mx-1"></i>
                 </a>
-                <a href="https://twitter.com/codyhowarth" target="_blank" data-hint="Twitter">
-                    <i class="fab fa-twitter-square"></i>
+                <a href="https://twitter.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter">
+                    <i class="fab fa-twitter-square fa-lg mx-1"></i>
                 </a>
-                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-hint="Email">
-                    <i class="fas fa-envelope-square"></i>
+                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Email">
+                    <i class="fas fa-envelope-square fa-lg mx-1"></i>
                 </a>
             </div>
         </div>
     </footer>
-
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/tether.min.js"></script>
