--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,6 @@
 
 <body id="mainpage">
 
-
-
     <nav class="navbar sticky-top py-0 navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand py-0" href="index.html">
             <span class="h6">Cody Howarth</span>
@@ -25,17 +23,16 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav py-0">
-                <li class="nav-item py-0">
-                    <a class="nav-link py-0" href="index.html">Home</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item py-0">
-                    <a class="nav-link py-0" href="projects.html">Projects</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="projects.html">Projects</a>
                 </li>
             </ul>
         </div>
     </nav>
-
 
     <div class="jumbotron">
         <div class="container">
@@ -45,7 +42,7 @@
         </div>
     </div>
 
-    <main class="container">
+    <main class="container pt-3">
 
         <div id="about" class="row">
             <div class="col-xl-9">
@@ -59,25 +56,25 @@
                 <h3>Contact</h3>
                 <div class="row">
                     <a class="col" href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-hint="LinkedIn">
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-linkedin fa-lg"></i>
                         <span>LinkedIn</span>
                     </a>
                 </div>
                 <div class="row">
                     <a class="col" href="https://github.com/codyhowarth" target="_blank" data-hint="GitHub">
-                        <i class="fab fa-github-square"></i>
+                        <i class="fab fa-github-square fa-lg"></i>
                         <span>Github</span>
                     </a>
                 </div>
                 <div class="row">
                     <a class="col" href="https://twitter.com/codyhowarth" target="_blank" data-hint="Twitter">
-                        <i class="fab fa-twitter-square"></i>
+                        <i class="fab fa-twitter-square fa-lg"></i>
                         <span>Twitter</span>
                     </a>
                 </div>
                 <div class="row">
                     <a class="col" href="mailto:codyhowarth@gmail.com" target="_blank" data-hint="Email">
-                        <i class="fas fa-envelope-square"></i>
+                        <i class="fas fa-envelope-square fa-lg"></i>
                         <span>Email</span>
                     </a>
                 </div>
@@ -85,23 +82,23 @@
         </div>
     </main>
 
-    <footer class="footer fixed-bottom border-top border-lightgray pt-1 pb-1">
+    <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
-            <div class="col pl-4">
+            <div class="col pl-4 pt-2">
                 &copy; 2018 Cody Howarth.
             </div>
-            <div class="ml-auto mr-4">
-                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-hint="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
+            <div class="ml-auto mr-4 pt-2 pb-0">
+                <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                    <i class="fab fa-linkedin fa-lg mx-1"></i>
                 </a>
-                <a href="https://github.com/codyhowarth" target="_blank" data-hint="GitHub">
-                    <i class="fab fa-github-square"></i>
+                <a href="https://github.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Github">
+                    <i class="fab fa-github-square fa-lg mx-1"></i>
                 </a>
-                <a href="https://twitter.com/codyhowarth" target="_blank" data-hint="Twitter">
-                    <i class="fab fa-twitter-square"></i>
+                <a href="https://twitter.com/codyhowarth" target="_blank" data-toggle="tooltip" data-placement="top" title="Twitter">
+                    <i class="fab fa-twitter-square fa-lg mx-1"></i>
                 </a>
-                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-hint="Email">
-                    <i class="fas fa-envelope-square"></i>
+                <a href="mailto:codyhowarth@gmail.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Email">
+                    <i class="fas fa-envelope-square fa-lg mx-1"></i>
                 </a>
             </div>
         </div>
