Add - link to resume

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cody_howarth_resume.pdf">Resume</a>
+                </li>
             </ul>
         </div>
     </nav>
