--- a/src/projects.html
+++ b/src/projects.html
@@ -30,6 +30,9 @@
                 <li class="nav-item py-0">
                     <a class="nav-link py-0" href="projects.html">Projects</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cody_howarth_resume.pdf">Resume</a>
+                </li>
             </ul>
         </div>
     </nav>
