--- a/src/projects.html
+++ b/src/projects.html
@@ -23,12 +23,12 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav py-0">
-                <li class="nav-item py-0">
-                    <a class="nav-link py-0" href="index.html">Home</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item py-0">
-                    <a class="nav-link py-0" href="projects.html">Projects</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="cody_howarth_resume.pdf">Resume</a>
@@ -47,40 +47,40 @@
 
     <main class="container">
 
-        <div class="row py-2">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
+        <div class="row py-3">
+            <div class="col-sm py-4">
+                <img src="assets/images/triviabattle.PNG" class="rounded d-block">
+            </div>
+            <div class="col-sm-8">
+                <h3>Trivia Battle</h3>
+                <p>A multiplayer trivia game that allows players to connect from any device. Uses
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a> for event driven client updates as the round progresses. Client and Game server communicate
+                    using
+                    <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal scalability. Front-end was programmed using
+                    <a href="https://vuejs.org/" target="_blank">Vue.js</a>, back-end is mostly
+                    <a href="https://nodejs.org/en/" target="_blank">Node JS</a>.
+                </p>
             </div>
         </div>
-        <div class="row py-2">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
+
+        <hr>
+
+        <div class="row py-3">
+            <div class="col-sm py-4">
+                <img src="assets/images/spaghetti.PNG" class="rounded d-block">
+            </div>
+            <div class="col-sm-8">
+                <h3>Spaghetti Makes me Moody</h3>
+                <p>An online journal that uses
+                    <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a> to analyze the sentiment (mood) of a user's journal entries to give them
+                    feedback. If a user creates an account, they are able to save, and track their entries over time. Uses
+                    <a href="https://reactjs.org/" target="_blank">React</a> for the front-end. Back-end API created with
+                    <a href="https://github.com/swagger-api/swagger-node" target="_blank">Swagger node</a> for express, and
+                    <a href="https://www.mongodb.com/" target="_blank">MongoDB</a> for database operations.
+                </p>
             </div>
         </div>
-        <div class="row py-2">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
+
 
     </main>
 
