Add - working project links

--- a/src/projects.html
+++ b/src/projects.html
@@ -49,11 +49,14 @@
 
         <div class="row py-3">
             <div class="col-sm py-4">
-                <img src="assets/images/triviabattle.PNG" class="rounded d-block">
+                    <a href="http://trivia-battle.herokuapp.com" target="_blank">
+                <img src="assets/images/triviabattle.PNG" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
-                <h3>Trivia Battle</h3>
-                <p>A multiplayer trivia game that allows players to connect from any device. Uses
+                <div class="customH3">
+               <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="pb-0 my-0">Trivia Battle</h3></a></div>
+                <div class="pt-0 mt-0 mb-4"><a href="http://trivia-battle.herokuapp.com" target="_blank"><span class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
+                <p class="left-align">A multiplayer trivia game that allows players to connect from any device. Uses
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a> for event driven client updates as the round progresses. Client and Game server communicate
                     using
                     <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal scalability. Front-end was programmed using
@@ -67,10 +70,13 @@
 
         <div class="row py-3">
             <div class="col-sm py-4">
-                <img src="assets/images/spaghetti.PNG" class="rounded d-block">
+                <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><img src="assets/images/spaghetti.PNG" class="rounded d-block"></a>
+                
             </div>
             <div class="col-sm-8">
-                <h3>Spaghetti Makes me Moody</h3>
+                    <div class="customH3">
+                    <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><h3 class="pb-0 my-0">Spaghetti Makes me Moody</h3></a></div>
+                    <div class="pt-0 mt-0 mb-4"><a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><span class="subtitle">https://spaghetti-makes-me-moody.herokuapp.com</span></a></div>
                 <p>An online journal that uses
                     <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a> to analyze the sentiment (mood) of a user's journal entries to give them
                     feedback. If a user creates an account, they are able to save, and track their entries over time. Uses
