Update - about text

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Cody Howarth</h1>
-            <p id="summary-text" class="lead">Computer Science student, and Software Developer. Currently attending my final year at Univeristy of Toronto,
-                with a specialization in computer science.</p>
+            <p id="summary-text" class="lead">Computer Science student, and Software Developer</p>
         </div>
     </div>
 
@@ -50,10 +49,17 @@
         <div id="about" class="row">
             <div class="col-xl-9">
                 <h3>About me</h3>
-                <p>I'm a lifelong learner who loves to build things. Currently finishing up a computer science degree at University
-                    of Toronto. Last year I worked as Software Devloper intern, where I gained valuable skills.
+                <p>I've always loved building things. My first career involved building
+                    tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
+                    I graduated from <a href="//www.conestogac.on.ca/">Conestoga College</a> with a
+                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a> 
+                    and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>
+                    while working as a full time Machinist. My interest in learning new technologies
+                    eventually led me to pursue a degree in Computer Science. I'm currently finishing my last year at
+                    <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science.
+                    Last year I worked as a Software Developer Intern, where I was able to apply the knowledge from my degree, and learn 
+                    real world dev skills. Here are some <a href="projects.html">projects</a> that I've contributed to.
                 </p>
-                <p>Paragraph two goes here.</p>
             </div>
             <div class="col">
                 <h3>Contact</h3>
