Update - make site more responsive

--- a/src/projects.html
+++ b/src/projects.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar sticky-top py-0 navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand py-0" href="index.html">
-            <span class="h6">Cody Howarth</span>
+            <span id="navBrandName" class="h6">Cody Howarth</span>
         </a>
 
         <button class="navbar-toggler py-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -45,7 +45,7 @@
 
     </div>
 
-    <main class="container">
+    <main id="mainBody" class="container">
 
         <div class="row py-3">
             <div class="col-sm py-4">
@@ -54,7 +54,7 @@
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-               <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="pb-0 my-0">Trivia Battle</h3></a></div>
+               <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="customH3 pb-0 my-0">Trivia Battle</h3></a></div>
                 <div class="pt-0 mt-0 mb-4"><a href="http://trivia-battle.herokuapp.com" target="_blank"><span class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
                 <p class="left-align">A multiplayer trivia game that allows players to connect from any device. Uses
                     <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a> for event driven client updates as the round progresses. Client and Game server communicate
@@ -75,7 +75,7 @@
             </div>
             <div class="col-sm-8">
                     <div class="customH3">
-                    <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><h3 class="pb-0 my-0">Spaghetti Makes me Moody</h3></a></div>
+                    <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><h3 class="customH3 pb-0 my-0">Spaghetti Makes me Moody</h3></a></div>
                     <div class="pt-0 mt-0 mb-4"><a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><span class="subtitle">https://spaghetti-makes-me-moody.herokuapp.com</span></a></div>
                 <p>An online journal that uses
                     <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a> to analyze the sentiment (mood) of a user's journal entries to give them
