--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 <body id="mainpage">
 
     <nav class="navbar sticky-top py-0 navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand py-0" href="index.html">
-            <span class="h6">Cody Howarth</span>
+        <a class="navbar-brand p-0 mb-1" href="index.html">
+            <span id="navBrandName" class="h6 py-0">Cody Howarth</span>
         </a>
 
         <button class="navbar-toggler py-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link py-0" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projects</a>
+                    <a class="nav-link py-0" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cody_howarth_resume.pdf">Resume</a>
+                    <a class="nav-link py-0" href="cody_howarth_resume.pdf">Resume</a>
                 </li>
             </ul>
         </div>
@@ -44,11 +44,11 @@
         </div>
     </div>
 
-    <main class="container pt-3">
+    <main id="mainBody" class="container pt-3">
 
         <div id="about" class="row">
             <div class="col-xl-9">
-                <h3>About me</h3>
+                <h3 class="customH3">About me</h3>
                 <p>I've always loved building things. My first career involved building
                     tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
                     I graduated from <a href="//www.conestogac.on.ca/">Conestoga College</a> with a
@@ -62,7 +62,7 @@
                 </p>
             </div>
             <div class="col">
-                <h3>Contact</h3>
+                <h3 class="customH3">Contact</h3>
                 <div class="row">
                     <a class="col" href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-hint="LinkedIn">
                         <i class="fab fa-linkedin fa-lg"></i>
