--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                     <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a> 
                     and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>
                     while working as a full time Machinist. My interest in learning new technologies
-                    eventually led me to pursue a degree in Computer Science. I'm currently finishing my last year at
+                    eventually led me to pursue a degree in Computer Science. I'm currently finishing my final year at
                     <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science.
                     Last year I worked as a Software Developer Intern, where I was able to apply the knowledge from my degree, and learn 
                     real world dev skills. Here are some <a href="projects.html">projects</a> that I've contributed to.
