--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Cody Howarth</h1>
-            <p id="summary-text" class="lead">Computer Science student, and Software Developer</p>
+            <p id="summary-text" class="lead">Software Developer and Computer Science Graduate</p>
         </div>
     </div>
 
@@ -55,7 +55,7 @@
                     <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a> 
                     and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>
                     while working as a full time Machinist. My interest in learning new technologies
-                    eventually led me to pursue a degree in Computer Science. I'm currently finishing my final year at
+                    eventually led me to pursue a degree in Computer Science. I recently graduated from
                     <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science.
                     Last year I worked as a Software Developer Intern, where I was able to apply the knowledge from my degree, and learn 
                     real world dev skills. Here are some <a href="projects.html">projects</a> that I've contributed to.
