--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Projects</h1>
-            <p id="summary-text" class="lead">Work that I have been involved with</p>
+            <p id="summary-text" class="lead">Work that I have contributed to</p>
         </div>
 
     </div>
@@ -57,7 +57,7 @@
                <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="customH3 pb-0 my-0">Trivia Battle</h3></a></div>
                 <div class="pt-0 mt-0 mb-4"><a href="http://trivia-battle.herokuapp.com" target="_blank"><span class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
                 <p class="left-align">A multiplayer trivia game that allows players to connect from any device. Uses
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a> for event driven client updates as the round progresses. Client and Game server communicate
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a> for event driven client updates as the round progresses. Client and game server communicate
                     using
                     <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal scalability. Front-end was programmed using
                     <a href="https://vuejs.org/" target="_blank">Vue.js</a>, back-end is mostly
