Add - openmaze project

--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,26 @@
             <div class="col-sm-8">
                 <div class="customH3">
                <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><h3 class="customH3 pb-0 my-0">Road RAGE</h3></a></div>
-                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><span class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><span class="subtitle">https://github.com/DuncanLab/RoadRAGE</span></a></div>
                 <p class="left-align">A driving simulator designed to help test decision making processes for neuroscience research. Developed using <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Currently in the role of lead developer. The project is in the prototype phase.</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row py-3">
+            <div class="col-sm py-4">
+                    <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank">
+                <img src="https://i.imgur.com/M1Ep92b.png" height="200" width="300" class="rounded d-block"></a>
+            </div>
+            <div class="col-sm-8">
+                <div class="customH3">
+               <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><span class="subtitle"></span>https://duncanlab.github.io/OpenMazeSite</a></div>
+                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research.
+                    Developed using <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for
+                    configuration files, and python for trial generation and statistical helpers. Currently in the role of 
+                supporting developer.</p>
             </div>
         </div>
 
