Fix - readme and proofread new project text

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
                     <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
                 <div class="pt-0 mt-0 mb-4"><a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><span class="subtitle"></span>https://duncanlab.github.io/OpenMazeSite</a></div>
                 <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research. Developed using <a href="https://unity3d.com"
-                        target="_blank">Unity 3D</a>. Uses JSON standard for configuration files, and python for trial generation
+                        target="_blank">Unity 3D</a>. Uses JSON standard for configuration files, and Python for trial generation
                     and statistical helpers. Currently in the role of supporting developer.</p>
             </div>
         </div>
@@ -73,7 +73,7 @@
         <div class="row py-3">
             <div class="col-sm py-4">
                 <a href="http://trivia-battle.herokuapp.com" target="_blank">
-                <img src="assets/images/triviabattle.PNG" class="rounded d-block"></a>
+                <img src="assets/images/triviabattle.PNG" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
@@ -91,7 +91,8 @@
         <hr>
         <div class="row py-3">
             <div class="col-sm py-4">
-                <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><img src="assets/images/spaghetti.PNG" class="rounded d-block"></a>
+                <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank">
+                <img src="assets/images/spaghetti.PNG" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
