Add - JSON text

--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,8 @@
                 <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><span class="subtitle">https://github.com/DuncanLab/RoadRAGE</span></a></div>
                 <p class="left-align">A driving simulator designed to help test decision making processes for neuroscience research. Developed
                     using
-                    <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Currently in the role of lead developer.
-                    The project is in the prototype phase.</p>
+                    <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for configuration files.
+                    Currently in the role of lead developer. The project is in the prototype phase.</p>
             </div>
         </div>
         <hr>
