Update bio and resume
- Reordered projects
- Fixed project links

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div id="about" class="row">
             <div class="col-xl-9">
                 <h3 class="customH3">About me</h3>
-                <p>I've always loved building things. My first career involved building tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
+                <p>I've always loved building things. In my first career I built tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
                     I graduated from <a href="//www.conestogac.on.ca/">Conestoga College</a> with a
-                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a>                    and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>                    while working as a full time Machinist. My interest in learning new technologies eventually led me to
-                    pursue a degree in Computer Science. I recently graduated from
-                    <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science. Last
-                    year I worked as a Software Developer Intern, where I was able to apply the knowledge from my degree,
-                    and learn real world dev skills. Here are some <a href="projects.html">projects</a> that I've contributed
+                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a> and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>                    while working as a full time Machinist. My interest in learning new technologies eventually led me to
+                    pursue a degree in Computer Science. I graduated from
+                    <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science.
+                    I currently work as Software Development Team Lead for <a href="https://illuminatemi.com/">Illuminate Manufacturing Intelligence</a> software by 
+                    <a href="https://atsautomation.com/">ATS Automation</a> in Ontario, Canada. Here are some <a href="projects.html">projects</a> that I've contributed
                     to.
                 </p>
             </div>
