--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,21 @@
     <main id="mainBody" class="container">
         <div class="row py-3">
             <div class="col-sm py-4">
+                <a href="https://github.com/DuncanLab/OpenMaze" target="_blank">
+                <img src="https://i.imgur.com/M1Ep92b.png" height="200" width="300" class="rounded d-block"></a>
+            </div>
+            <div class="col-sm-8">
+                <div class="customH3">
+                    <a href="https://github.com/DuncanLab/OpenMaze" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/OpenMaze" target="_blank"><span class="subtitle"></span>https://github.com/DuncanLab/OpenMaze</a></div>
+                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research. Developed using <a href="https://unity3d.com"
+                        target="_blank">Unity 3D</a>. Uses JSON standard for configuration files, and Python for trial generation
+                    and statistical helpers. Currently in the role of supporting developer.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="row py-3">
+            <div class="col-sm py-4">
                 <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank">
                 <img src="https://i.imgur.com/fMCVYMw.png" height="200" width="300" class="rounded d-block"></a>
             </div>
@@ -52,21 +67,6 @@
                     using
                     <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for configuration files.
                     Currently in the role of lead developer. The project is in the prototype phase.</p>
-            </div>
-        </div>
-        <hr>
-        <div class="row py-3">
-            <div class="col-sm py-4">
-                <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank">
-                <img src="https://i.imgur.com/M1Ep92b.png" height="200" width="300" class="rounded d-block"></a>
-            </div>
-            <div class="col-sm-8">
-                <div class="customH3">
-                    <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
-                <div class="pt-0 mt-0 mb-4"><a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><span class="subtitle"></span>https://duncanlab.github.io/OpenMazeSite</a></div>
-                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research. Developed using <a href="https://unity3d.com"
-                        target="_blank">Unity 3D</a>. Uses JSON standard for configuration files, and Python for trial generation
-                    and statistical helpers. Currently in the role of supporting developer.</p>
             </div>
         </div>
         <hr>
