--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Cody Howarth</h1>
-            <p id="summary-text" class="lead">Software Developer and Computer Science Graduate</p>
+            <p id="summary-text" class="lead">Software Developer</p>
         </div>
     </div>
     <main id="mainBody" class="container pt-3">
@@ -84,7 +84,7 @@
     <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
             <div class="col pl-4 pt-2">
-                &copy; 2022 Cody Howarth.
+                &copy; 2023 Cody Howarth.
             </div>
             <div class="ml-auto mr-4 pt-2 pb-0">
                 <a href="https://www.linkedin.com/in/codyhowarth/" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn">
